Fix Navbar overlap

--- a/src/components/CardWrapper/CardWrapper.module.css
+++ b/src/components/CardWrapper/CardWrapper.module.css
@@ -2,5 +2,6 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 32px 8px;
+  padding-top: 8px;
   justify-items: center;
 }
