--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,4 +1,5 @@
 .navbar {
+  height: 44px;
   padding: 12px;
   font-size: 18px;
   letter-spacing: 2px;
@@ -6,7 +7,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  position: fixed;
+  position: sticky;
+  top: 0;
   width: 100vw;
 }
 
